--- a/front-end/package.json
+++ b/front-end/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.2.0",
     "@stripe/react-stripe-js": "^1.5.0",
     "@stripe/stripe-js": "^1.19.0",
     "@syncfusion/ej2-react-calendars": "^19.3.44",
@@ -11,18 +12,23 @@
     "@testing-library/user-event": "^12.8.3",
     "@thumbtack/thumbprint-react": "^14.4.1",
     "axios": "^0.21.1",
+    "bootstrap": "^5.2.2",
     "firebase": "^9.1.0",
     "google-map-react": "^2.1.10",
     "infinite-scroll": "^4.0.1",
+    "mdb-react-ui-kit": "^4.2.0",
     "mdb-ui-kit": "^3.9.0",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.6.0",
     "react-datepicker": "^4.2.1",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
+    "react-elastic-carousel": "^0.11.5",
     "react-responsive-carousel": "^3.2.22",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.0.3",
+    "swiper": "^6.8.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
