--- a/front-end/package.json
+++ b/front-end/package.json
@@ -18,6 +18,7 @@
     "infinite-scroll": "^4.0.1",
     "mdb-react-ui-kit": "^4.2.0",
     "mdb-ui-kit": "^3.9.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-datepicker": "^4.2.1",
