--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,11 +10,9 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "@thumbtack/thumbprint-react": "^14.4.1",
     "axios": "^0.21.1",
     "bootstrap": "^5.2.2",
     "firebase": "^9.1.0",
-    "google-map-react": "^2.1.10",
     "infinite-scroll": "^4.0.1",
     "mdb-react-ui-kit": "^4.2.0",
     "mdb-ui-kit": "^3.9.0",
@@ -29,6 +27,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.0.3",
+    "styled-components": "^5.3.6",
     "swiper": "^6.8.4",
     "web-vitals": "^1.1.2"
   },
